syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/lampard1014/aphro/CommonBiz/Response/PB/response.proto";
package Aphro.Merchant.pb;

service MerchantService {

		//商户开户
		rpc merchantOpen(MerchantOpenRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/open"
				body:"*"
			};
		}
	
		//商户用户注册
		rpc merchantRegister(MerchantRegisterRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/register"
				body:"*"
			};
		}

		//商户用户修改密码
		rpc merchantChangePsw(MerchantChangePswRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/changePsw"
				body:"*"
			};
		}

		//商户app登陆
		rpc merchantLogin(MerchantLoginRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/login"
				body:"*"
			};
		}

		//商户下的手机号是否唯一
		rpc merchantAccountCellphoneUnquie(MerchantAccountCellphoneUnquieReqeuest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/account/isUnique"
				body:"*"
			};
		}

		//商户app 信息
		rpc merchantInfo(MerchantInfoRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/info"
				body:"*"
			};
		}

		//商户app 信息
		rpc merchantRoomInfo(MerchantRoomInfoRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				get: "/merchant/room/{roomID}"
			};
		}

		// 新增商户服务信息
		rpc merchantWaiterCreate(MerchantWaiterCreateRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/waiter/create"
				body: "*"
			};
		}

		// 删除商户服务信息
		rpc merchantWaiterDelete (MerchantWaiterDeleteRequest) returns (Aphro.CommonBiz.Response) {
			option (google.api.http) = {
				post: "/merchant/waiter/delete"
				body: "*"
			};
		}

		//短信验证码 验证接口
        rpc merchantVerifyCode(MerchantVerifyCodeRequest) returns (Aphro.CommonBiz.Response) {
            option (google.api.http) = {
                post: "/merchant/verifyCode"
                body:"*"
            };
        }

        //短信验证码 发送接口
            rpc merchantSendCode(MerchantSendCodeRequest) returns (Aphro.CommonBiz.Response) {
                option (google.api.http) = {
                    post: "/merchant/sendCode"
                    body:"*"
                };
            }
}


message MerchantWaiterCreateRequest {
	string token = 1;
	string merchantID = 2;
	string name = 3;
    string reserve = 4;
}

message MerchantWaiterCreateResponse {
	bool success = 1;
}

message MerchantWaiterDeleteRequest {
	string token = 1;
	uint64 waiterid = 2;
}

message MerchantWaiterDeleteResponse {
	bool success = 1;
}

message MerchantRoomInfoRequest {
	string sessionToken = 1;
	uint32 roomID = 2;
}

message MerchantRoomInfoResponse {
	string reverse = 1;
}

message MerchantOpenRequest {
	string name = 1;
	string cellphone = 2;
	string address = 3;
	uint32 paymentBit = 4;
}

message MerchantOpenResponse {
	bool success = 1;
}

message MerchantRegisterRequest {
	string key = 1;
	string name = 2;
	string verifyCode = 3;
	uint32 role = 5;
	uint32 merchantID = 6;
}

message MerchantRegisterResponse {
	bool success = 1;
}

message MerchantChangePswRequest {
	string key = 1;
	string sessionToken = 2;
	string verifyCode = 3;
}

message MerchantChangePswResponse {
	bool success = 1;
}

message MerchantLoginRequest {
	string key = 1;
	string tokenRequest = 2;
	string sessionToken = 3;

}

message MerchantLoginResponse {
	string sessionToken = 1;
	bool success = 2;
}

message MerchantInfoRequest {
	string token = 1;
	string merchantID = 2;
}

message InnerMerchantAccount {
	uint32 role = 1;
	string name = 2;
}

message MerchantInfoResponse {
	string merchantName = 1;
	InnerMerchantAccount merchantAccount = 2;
}

message MerchantSendCodeRequest {
	string 	cellphone = 1;
	uint32	scene	=	2;
}

message MerchantSendCodeResponse {
	bool 	success = 1;
}

message MerchantVerifyCodeRequest {
	string 	cellphone = 1;
	uint32	scene	=	2;
	string 	smsCode	=	3;
}

message MerchantVerifyCodeResponse {
	bool 	success = 1;
}

message MerchantAccountCellphoneUnquieReqeuest {
        string cellphone = 1;
        uint32 role = 2;
}

message MerchantAccountCellphoneUnquieResponse {
    bool isExisted = 1;
}